jfLogon : remove pm-utils : use systemctl instead